@@ -5,6 +5,7 @@
  */
 package ru.game.aurora.npc;
 
+import ru.game.aurora.application.GameLogger;
 import ru.game.aurora.application.ResourceManager;
 import ru.game.aurora.dialog.Dialog;
 import ru.game.aurora.world.equip.StarshipWeapon;
@@ -74,6 +75,7 @@ public class AlienRace implements Serializable {
     }
 
     public void setRelationToPlayer(int relationToPlayer) {
+        GameLogger.getInstance().logMessage("Relation with " + name + " race changed from " + this.relationToPlayer + " to " + relationToPlayer);
         this.relationToPlayer = relationToPlayer;
     }
 
